--- a/netflix_clone/public/index.html
+++ b/netflix_clone/public/index.html
@@ -12,7 +12,7 @@
       font-family: 'Montserrat', sans-serif;
     }
   </style>
-  <title>React App</title>
+  <title>Netflix Clone App</title>
 </head>
 
 <body>
